# diagnose-to-plan

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.dtp/: scrub-patterns.txt  workspace.yaml
clients/: ACTIVE.md  README.md
decisions/: 0001-v1-state.md  0002-intake-outage.md  0003-remote-setup.md  0004-hosted-dtp-private-practice-os-boundary.md  0005-private-engagement-durability.md  0006-github-enterprise-org-boundary.md  0007-practice-os-source-material-integration.md  0008-hosted-dtp-phase-0-2-governance.md  0009-workspace-control-plane-boundaries.md  0010-opportunity-os-private-store-boundary.md  0011-event-based-research-and-knowledge-base-maintenance.md  0012-autonomy-readiness-ladder.md  0013-practice-operating-review-loop.md  0014-research-source-freshness-dry-run.md  0015-research-source-freshness-local-command.md  0016-agent-source-registry-web-evidence-policy.md  0017-agent-source-packs-v0.md  0018-software-architecture-source-pack.md  0019-software-engineering-source-pack.md  0020-qa-audit-source-pack.md  0021-devops-infrastructure-source-pack.md  0022-source-pack-schema-cli-validation.md  0023-source-pack-status-dashboard.md
docs/: 01-architecture.md  02-commands.md  03-skills.md  04-multi-repo.md  AGENT_SOURCE_PACK_SCHEMA_V0.md  AGENT_SOURCE_REGISTRY_AND_WEB_EVIDENCE_POLICY_V0.md  AGENT_SQUADS_KNOWLEDGE_BASE_V0.md  AUTONOMY_READINESS_LADDER_V0.md  BUSINESS_ADMIN_OPERATING_SYSTEM.md  BUSINESS_BRAIN_OPERATING_SYSTEM.md  CLIENT_COMMAND_ROOM_PATTERN.md  (+80 more)
(+572 files in other folders)
